--- a/index.html
+++ b/index.html
@@ -9,87 +9,117 @@
 </head>
 
 <body>
-  <h1>Top 5 Best Places to Travel If You’re a Nature Lover</h1>
-  <p>If you’re a nature lover with a sense of adventure, the world is full of breathtaking destinations that offer the
-    perfect mix of stunning landscapes, wildlife encounters, and outdoor activities. From towering mountains and vast
-    glaciers to lush rainforests and pristine beaches, these places allow you to disconnect from the hustle and bustle
-    of everyday life and truly immerse yourself in the beauty of the natural world. Whether you're seeking thrilling
-    hikes, serene lakes, or unique wildlife experiences, here are the top 5 best places to travel if you want to explore
-    nature at its finest.</p>
+  <div class="header">
+    <img class="headerImage"
+      src="https://images.pexels.com/photos/1051075/pexels-photo-1051075.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+    <h1>Top 5 Best Places to Travel If You’re a Nature Lover</h1>
+    <p>If you’re a nature lover with a sense of adventure, the world is full of breathtaking destinations that offer the
+      perfect mix of stunning landscapes, wildlife encounters, and outdoor activities. From towering mountains and vast
+      glaciers to lush rainforests and pristine beaches, these places allow you to disconnect from the hustle and bustle
+      of everyday life and truly immerse yourself in the beauty of the natural world. Whether you're seeking thrilling
+      hikes, serene lakes, or unique wildlife experiences, here are the top 5 best places to travel if you want to
+      explore
+      nature at its finest.</p>
+  </div>
 
-  <div class="Places">
-    <div>
-      <h2>Iceland – A Land of Fire and Ice</h2>
-      <p>Why it's a nature lover's paradise: Iceland is home to some of the most dramatic landscapes in the world. From
-        active volcanoes to massive glaciers, waterfalls, and geothermal hot springs, it’s a natural wonderland. You can
-        hike across glaciers, witness the Northern Lights, or take a dip in the famous Blue Lagoon.
-        Must-see spots: Gullfoss waterfall, Thingvellir National Park, Vatnajökull glacier, and the volcanic beaches of
-        Reynisfjara.</p>
+  <!-- Nedanför presenteras destinationerna-->
+
+  <!-- Island -->
+  <div class="places">
+    <div class="box">
       <img src="https://images.pexels.com/photos/4156951/pexels-photo-4156951.jpeg">
-      <br>
-      <a href="https://google.com">
-        <button>Read more about Iceland</button>
-      </a>
+      <div>
+        <h2>Iceland – A Land of Fire and Ice</h2>
+        <p><b>Why it's a nature lover's paradise:</b> Iceland is home to some of the most dramatic landscapes in the
+          world. From active volcanoes to massive glaciers, waterfalls, and geothermal hot springs, it’s a natural
+          wonderland. You can
+          hike across glaciers, witness the Northern Lights, or take a dip in the famous Blue Lagoon.
+          Must-see spots: Gullfoss waterfall, Thingvellir National Park, Vatnajökull glacier, and the volcanic beaches
+          of
+          Reynisfjara.</p>
+        <br>
+        <a href="https://google.com">
+          <button>Read more about Iceland</button>
+        </a>
+      </div>
     </div>
 
-    <div>
-      <h2>New Zealand – Adventure Awaits at Every Corner</h2>
-      <p>Why it's a nature lover's paradise: Known for its diverse ecosystems, New Zealand offers everything from
-        rainforests to alpine mountains to pristine beaches. Whether you're into hiking, kayaking, or bungee jumping,
-        New Zealand's outdoor activities are endless.
-        Must-see spots: Fiordland National Park, Tongariro Alpine Crossing, Milford Sound, and Abel Tasman National
-        Park.</p>
+    <!-- New Zealand -->
+    <div class="box">
       <img
         src="https://images.pexels.com/photos/2407783/pexels-photo-2407783.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
-      <br>
-      <a href="https://google.com">
-        <button>Read more about New Zealand</button>
-      </a>
+      <div>
+        <h2>New Zealand – Adventure Awaits at Every Corner</h2>
+        <p><b>Why it's a nature lover's paradise:</b> Known for its diverse ecosystems, New Zealand offers everything
+          from
+          rainforests to alpine mountains to pristine beaches. Whether you're into hiking, kayaking, or bungee jumping,
+          New Zealand's outdoor activities are endless.
+          Must-see spots: Fiordland National Park, Tongariro Alpine Crossing, Milford Sound, and Abel Tasman National
+          Park.</p>
+        <br>
+        <a href="https://google.com">
+          <button>Read more about New Zealand</button>
+        </a>
+      </div>
     </div>
 
-    <div>
-      <h2>Costa Rica – Biodiversity in Abundance</h2>
-      <p>Why it's a nature lover's paradise: Costa Rica is one of the most biodiverse countries on the planet. With
-        tropical rainforests, volcanoes, cloud forests, and wildlife like sloths, monkeys, and exotic birds, it’s a
-        haven for eco-tourism.
-        Must-see spots: Manuel Antonio National Park, Arenal Volcano, Monteverde Cloud Forest, and Tortuguero National
-        Park (great for turtle watching).</p>
+    <!-- Costa Rica -->
+    <div class="box">
       <img
         src="https://images.pexels.com/photos/1478941/pexels-photo-1478941.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
-      <br>
-      <a href="https://google.com">
-        <button>Read more about Costa Rica</button>
-      </a>
+      <div>
+        <h2>Costa Rica – Biodiversity in Abundance</h2>
+        <p><b>Why it's a nature lover's paradise:</b> Costa Rica is one of the most biodiverse countries on the planet.
+          With
+          tropical rainforests, volcanoes, cloud forests, and wildlife like sloths, monkeys, and exotic birds, it’s a
+          haven for eco-tourism.
+          Must-see spots: Manuel Antonio National Park, Arenal Volcano, Monteverde Cloud Forest, and Tortuguero National
+          Park (great for turtle watching).</p>
+        <br>
+        <a href="https://google.com">
+          <button>Read more about Costa Rica</button>
+        </a>
+      </div>
     </div>
 
-    <div>
-      <h2>Canada – Vast Wilderness to Explore</h2>
-      <p>Why it's a nature lover's paradise: With its expansive national parks, towering mountain ranges, and
-        crystal-clear lakes, Canada is a dream for nature enthusiasts. You can enjoy peaceful hikes, wildlife spotting,
-        and even paddle across some of the world's most stunning lakes.
-        Must-see spots: Banff and Jasper National Parks, Niagara Falls, Lake Louise, and the Yukon wilderness.</p>
+    <!-- Canada -->
+    <div class="box">
       <img
         src="https://images.pexels.com/photos/5226950/pexels-photo-5226950.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-      <br>
-      <a href="https://google.com">
-        <button>Read more about Canada</button>
-      </a>
+      <div>
+        <h2>Canada – Vast Wilderness to Explore</h2>
+        <p><b>Why it's a nature lover's paradise:</b> With its expansive national parks, towering mountain ranges, and
+          crystal-clear lakes, Canada is a dream for nature enthusiasts. You can enjoy peaceful hikes, wildlife
+          spotting,
+          and even paddle across some of the world's most stunning lakes.
+          Must-see spots: Banff and Jasper National Parks, Niagara Falls, Lake Louise, and the Yukon wilderness.</p>
+        <br>
+        <a href="https://google.com">
+          <button>Read more about Canada</button>
+        </a>
+      </div>
     </div>
 
-    <div>
-      <h2>Patagonia (Argentina and Chile) – The Ultimate Adventure</h2>
-      <p>Why it's a nature lover's paradise: Patagonia is a vast and rugged region at the southern tip of South America,
-        offering some of the most remote and untouched landscapes in the world. With jagged mountain peaks, glaciers,
-        fjords, and Patagonia’s unique wildlife, it’s perfect for those who want to explore some of the planet’s wildest
-        places.
-        Must-see spots: Torres del Paine National Park, Perito Moreno Glacier, Mount Fitz Roy, and the Tierra del Fuego
-        National Park.</p>
+    <!-- Patagonia -->
+    <div class="box">
       <img
         src="https://images.pexels.com/photos/2473845/pexels-photo-2473845.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
-      <br>
-      <a href="https://google.com">
-        <button>Read more about Patagonia</button>
-      </a>
+      <div>
+        <h2>Patagonia (Argentina and Chile) – The Ultimate Adventure</h2>
+        <p><b>Why it's a nature lover's paradise:</b> Patagonia is a vast and rugged region at the southern tip of South
+          America,
+          offering some of the most remote and untouched landscapes in the world. With jagged mountain peaks, glaciers,
+          fjords, and Patagonia’s unique wildlife, it’s perfect for those who want to explore some of the planet’s
+          wildest
+          places.
+          Must-see spots: Torres del Paine National Park, Perito Moreno Glacier, Mount Fitz Roy, and the Tierra del
+          Fuego
+          National Park.</p>
+        <br>
+        <a href="https://google.com">
+          <button>Read more about Patagonia</button>
+        </a>
+      </div>
     </div>
 
   </div>
